test/parsing/ferguson/reserved-borrowed.good
reserved-borrowed.chpl:1: error: attempt to redefine reserved type 'borrowed'
reserved-borrowed.chpl:3: error: attempt to redefine reserved type 'borrowed'
reserved-borrowed.chpl:6: error: attempt to redefine reserved type 'borrowed'
reserved-borrowed.chpl:7: error: attempt to redefine reserved type 'borrowed'
reserved-borrowed.chpl:10: error: attempt to redefine reserved type 'borrowed'
reserved-borrowed.chpl:12: error: attempt to redefine reserved type 'borrowed'
reserved-borrowed.chpl:17: error: attempt to redefine reserved type 'borrowed'
