test/parsing/ferguson/reserved-borrowed.chpl
var borrowed = 0;

proc f(borrowed) {
}

class borrowed {
  var borrowed =0;
}

type borrowed = real;

proc borrowed() {
}

proc test() {
  try {
  } catch borrowed {
  }
}
